--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=0.24.2
-nltk>=3.6.2
-gensim>=4.0.1
-tqdm>=4.61.1
+regex==2024.11.6
+streamlit==1.46.1
+nltk==3.9.1
+joblib==1.5.1clear
+tqdm>=4.67.1
 
